@@ -12,6 +12,7 @@ import io.github.hectorvent.floci.services.apigateway.model.GatewayResponseType;
 import io.github.hectorvent.floci.services.apigateway.model.Integration;
 import io.github.hectorvent.floci.services.apigateway.model.IntegrationResponse;
 import io.github.hectorvent.floci.services.apigateway.model.MethodConfig;
+import io.github.hectorvent.floci.services.apigateway.model.MethodSetting;
 import io.github.hectorvent.floci.services.apigateway.model.Stage;
 import io.github.hectorvent.floci.services.apigateway.model.UsagePlan;
 import io.github.hectorvent.floci.services.apigateway.model.UsagePlanKey;
@@ -95,6 +96,7 @@ public class ApiGatewayExecuteController {
             "application/graphql");
 
     private final ApiGatewayService apiGatewayService;
+    private final CognitoUserPoolAuthorizer cognitoAuthorizer;
     private final ApiGatewayV2Service apiGatewayV2Service;
     private final LambdaService lambdaService;
     private final RegionResolver regionResolver;
@@ -110,7 +112,8 @@ public class ApiGatewayExecuteController {
     private final ExecuteApiSigV4Authorizer sigV4Authorizer;
 
     @Inject
-    public ApiGatewayExecuteController(ApiGatewayService apiGatewayService, ApiGatewayV2Service apiGatewayV2Service,
+    public ApiGatewayExecuteController(ApiGatewayService apiGatewayService, CognitoUserPoolAuthorizer cognitoAuthorizer,
+                                       ApiGatewayV2Service apiGatewayV2Service,
                                        LambdaService lambdaService, RegionResolver regionResolver,
                                        ObjectMapper objectMapper, VtlTemplateEngine vtlEngine,
                                        AwsServiceRouter serviceRouter,
@@ -122,6 +125,7 @@ public class ApiGatewayExecuteController {
                                        RequestContext requestContext,
                                        ExecuteApiSigV4Authorizer sigV4Authorizer) {
         this.apiGatewayService = apiGatewayService;
+        this.cognitoAuthorizer = cognitoAuthorizer;
         this.apiGatewayV2Service = apiGatewayV2Service;
         this.lambdaService = lambdaService;
         this.regionResolver = regionResolver;
@@ -139,7 +143,7 @@ public class ApiGatewayExecuteController {
 
     /** Matches an ELBv2 listener ARN (ALB {@code app/} or NLB {@code net/}); group 1 = region. */
     static final Pattern ELB_LISTENER_ARN = Pattern.compile(
-            "^arn:aws[^:]*:elasticloadbalancing:([^:]+):[^:]*:listener/(?:app|net)/.+$");
+            "^arn:" + AwsArnUtils.PARTITION_REGEX + ":elasticloadbalancing:([^:]+):[^:]*:listener/(?:app|net)/.+$");
 
     private record AuthorizerResult(Response errorResponse, String principalId, Map<String, Object> context) {}
 
@@ -433,7 +437,20 @@ public class ApiGatewayExecuteController {
                     "No integration type configured");
         }
 
-        return switch (integrationType.toUpperCase(Locale.ROOT)) {
+        Response vpcLinkError = validateVpcLink(scope, region, integration);
+        if (vpcLinkError != null) return vpcLinkError;
+
+        String cacheKey = cacheKeyFor(stage, matched, httpMethod, path, integration, headers, uriInfo);
+        if (cacheKey != null) {
+            CachedResponse cached = responseCache.get(cacheKey);
+            if (cached != null && cached.expiresAt() > System.currentTimeMillis()) {
+                LOG.debugv("execute-api: cache hit for {0} {1}/{2}{3}", httpMethod, apiId, stageName, path);
+                return fromCache(cached);
+            }
+            responseCache.remove(cacheKey);
+        }
+
+        Response response = switch (integrationType.toUpperCase(Locale.ROOT)) {
             case "AWS_PROXY" -> invokeProxy(scope, region, apiId, httpMethod, path, proxy, stageName,
                     matched, stage, integration, headers, uriInfo, body, authorizerResult, resolvedApiKey,
                     iamIdentity);
@@ -441,13 +458,20 @@ public class ApiGatewayExecuteController {
                     matched, integration, headers, uriInfo, body, authorizerResult);
             case "HTTP_PROXY" -> invokeHttpProxy(scope, apiId, httpMethod, path, proxy, stageName,
                     matched, integration, headers, uriInfo, body);
-            case "HTTP" -> invokeHttpIntegration(scope, apiId, httpMethod, path, proxy, stageName,
+            case "HTTP" -> invokeHttpIntegration(scope, region, apiId, httpMethod, path, proxy, stageName,
                     matched, integration, headers, uriInfo, body, authorizerResult);
             case "MOCK" -> invokeMock(scope, region, httpMethod, path, stageName,
                     matched, integration, headers, uriInfo, body, authorizerResult);
             default -> gatewayResponse(scope, GatewayResponseType.API_CONFIGURATION_ERROR, 500,
                     "Unsupported integration type: " + integration.getType());
         };
+
+        // Only successful responses are cached — AWS does not serve an error from the cache.
+        if (cacheKey != null && response.getStatus() < 400) {
+            responseCache.put(cacheKey,
+                    snapshotForCache(response, cacheTtlSeconds(methodSettingFor(stage, matched.getPath(), httpMethod))));
+        }
+        return response;
     }
 
     private void applyApiOwnerContext(ApiGatewayV2Service.ApiOwner owner) {
@@ -585,7 +609,7 @@ public class ApiGatewayExecuteController {
                 httpMethod, apiId, stageName, path, uri);
 
         io.github.hectorvent.floci.services.apigatewayv2.proxy.ProxyResult result =
-                httpProxyInvoker.invoke(target, ctx);
+                httpProxyInvoker.invoke(target, ctx, proxyOptions(integration));
 
         Response.ResponseBuilder rb = Response.status(result.statusCode());
         if (result.body() != null) rb.entity(result.body());
@@ -601,6 +625,192 @@ public class ApiGatewayExecuteController {
         return rb.build();
     }
 
+    // ──────────────────────────── Response caching ────────────────────────────
+
+    /** AWS's default integration cache TTL when a method enables caching without naming one. */
+    private static final int DEFAULT_CACHE_TTL_SECONDS = 300;
+
+    private record CachedResponse(int status, Object entity, Map<String, String> headers, long expiresAt) {}
+
+    private final Map<String, CachedResponse> responseCache = new ConcurrentHashMap<>();
+
+    /**
+     * The cache key for this request, or {@code null} when caching does not apply. AWS caches only
+     * when the stage has a cache cluster <em>and</em> the method — or the wildcard entry — enables
+     * caching. The key is the integration's {@code cacheNamespace} plus the values of its
+     * {@code cacheKeyParameters}, so two requests differing only in an uncached parameter share an
+     * entry, which is exactly the behaviour that surprises people in production.
+     *
+     * <p>Nothing identifying the resource goes into the key beyond the namespace itself. AWS
+     * documents {@code cacheNamespace} as shareable across resources precisely so those resources
+     * can return the same cached data; mixing the method and request path back in would mean two
+     * resources could never share an entry, which is the setting's whole purpose. The namespace
+     * defaults to the resource id, so resources that did not opt into sharing stay separate.
+     */
+    private String cacheKeyFor(Stage stage, ApiGatewayResource resource, String httpMethod,
+                               String path, Integration integration, HttpHeaders headers, UriInfo uriInfo) {
+        if (stage == null || !stage.isCacheClusterEnabled()) return null;
+        MethodSetting setting = methodSettingFor(stage, resource.getPath(), httpMethod);
+        if (setting == null || !setting.isCachingEnabled()) return null;
+
+        StringBuilder key = new StringBuilder();
+        key.append(integration.getCacheNamespace() != null
+                ? integration.getCacheNamespace() : resource.getId());
+        for (String param : integration.getCacheKeyParameters()) {
+            key.append('|').append(param).append('=')
+                    .append(cacheKeyParameterValue(param, headers, uriInfo, resource.getPath(), path));
+        }
+        return key.toString();
+    }
+
+    /**
+     * The method's own settings, falling back to the stage-wide wildcard entry. Settings are keyed
+     * by the resource path without its leading slash ({@code pets/GET}), matching what AWS reports.
+     */
+    private static MethodSetting methodSettingFor(Stage stage, String resourcePath, String httpMethod) {
+        String normalized = resourcePath != null && resourcePath.startsWith("/")
+                ? resourcePath.substring(1) : resourcePath;
+        MethodSetting exact = stage.getMethodSettings().get(normalized + "/" + httpMethod);
+        return exact != null ? exact : stage.getMethodSettings().get("*/*");
+    }
+
+    private String cacheKeyParameterValue(String param, HttpHeaders headers, UriInfo uriInfo,
+                                          String resourcePath, String path) {
+        if (param.startsWith("method.request.querystring.")) {
+            return uriInfo.getQueryParameters()
+                    .getFirst(param.substring("method.request.querystring.".length()));
+        }
+        if (param.startsWith("method.request.header.")) {
+            return headers.getHeaderString(param.substring("method.request.header.".length()));
+        }
+        if (param.startsWith("method.request.path.")) {
+            return extractPathParams(resourcePath, path)
+                    .get(param.substring("method.request.path.".length()));
+        }
+        return null;
+    }
+
+    private static int cacheTtlSeconds(MethodSetting setting) {
+        int ttl = setting != null ? setting.getCacheTtlInSeconds() : 0;
+        return ttl > 0 ? ttl : DEFAULT_CACHE_TTL_SECONDS;
+    }
+
+    private static CachedResponse snapshotForCache(Response response, int ttlSeconds) {
+        Map<String, String> headers = new LinkedHashMap<>();
+        response.getStringHeaders().forEach((name, values) -> {
+            if (!values.isEmpty()) headers.put(name, values.get(0));
+        });
+        return new CachedResponse(response.getStatus(), response.getEntity(), headers,
+                System.currentTimeMillis() + ttlSeconds * 1000L);
+    }
+
+    private static Response fromCache(CachedResponse cached) {
+        Response.ResponseBuilder rb = Response.status(cached.status()).entity(cached.entity());
+        cached.headers().forEach(rb::header);
+        return rb.build();
+    }
+
+    // ──────────────────────────── VPC Link ────────────────────────────
+
+    /**
+     * Checks that a {@code VPC_LINK} integration names a VPC link that exists and is available,
+     * returning an error response when it does not and {@code null} when the request may proceed.
+     *
+     * <p>Floci has no real VPC, so a valid link routes straight to the integration URI. What this
+     * catches is the misconfiguration AWS also rejects: pointing at a link that was deleted or
+     * never created, which would otherwise silently behave like a plain internet integration.
+     */
+    private Response validateVpcLink(GatewayResponseScope scope, String region, Integration integration) {
+        if (!"VPC_LINK".equalsIgnoreCase(integration.getConnectionType())) {
+            return null;
+        }
+        String connectionId = integration.getConnectionId();
+        if (connectionId == null || connectionId.isBlank()) {
+            return gatewayResponse(scope, GatewayResponseType.API_CONFIGURATION_ERROR, 500,
+                    "VPC_LINK integration is missing a connectionId");
+        }
+        try {
+            io.github.hectorvent.floci.services.apigateway.model.VpcLink link =
+                    apiGatewayService.getVpcLink(region, connectionId);
+            if (!"AVAILABLE".equalsIgnoreCase(link.getStatus())) {
+                return Response.status(502)
+                        .entity(jsonMessage("VPC link is not available: " + link.getStatus()))
+                        .type(MediaType.APPLICATION_JSON).build();
+            }
+            return null;
+        } catch (AwsException e) {
+            LOG.warnv("VPC_LINK integration references unknown link {0} in {1}", connectionId, region);
+            return Response.status(502)
+                    .entity(jsonMessage("Invalid VPC link identifier specified: " + connectionId))
+                    .type(MediaType.APPLICATION_JSON).build();
+        }
+    }
+
+    // ──────────────────────────── Binary payloads ────────────────────────────
+
+    /**
+     * True when {@code contentType} matches one of the API's configured {@code binaryMediaTypes}.
+     * The charset parameter is ignored when comparing.
+     *
+     * <p>Entries are compared literally apart from the catch-all <code>*&#47;*</code>, which is the
+     * only wildcard AWS documents concretely: "To support all binary media types, specify
+     * <code>*&#47;*</code>." A subtype wildcard such as {@code image/*} is not expanded, because
+     * nothing in the AWS documentation says API Gateway treats it as a pattern: every example there
+     * names one exact media type at a time, and the browser walkthrough tells you to register the
+     * concrete {@code image/webp} even though the request's {@code Accept} header carries
+     * {@code image/*}.
+     *
+     * @see <a href="https://docs.aws.amazon.com/apigateway/latest/developerguide/api-gateway-payload-encodings-configure-with-console.html">Enabling binary support using the console</a>
+     */
+    private boolean isBinaryMediaType(String region, String apiId, String contentType) {
+        if (contentType == null || contentType.isBlank()) return false;
+        List<String> binaryTypes;
+        try {
+            binaryTypes = apiGatewayService.getRestApi(region, apiId).getBinaryMediaTypes();
+        } catch (AwsException e) {
+            return false;
+        }
+        if (binaryTypes == null || binaryTypes.isEmpty()) return false;
+
+        String base = contentType.contains(";")
+                ? contentType.substring(0, contentType.indexOf(';')).trim() : contentType.trim();
+        return binaryTypes.stream().anyMatch(configured -> mediaTypeMatches(configured, base));
+    }
+
+    private static boolean mediaTypeMatches(String configured, String contentType) {
+        if (configured == null) return false;
+        String candidate = configured.trim();
+        return "*/*".equals(candidate) || candidate.equalsIgnoreCase(contentType);
+    }
+
+    /**
+     * The request body as mapping templates should see it. {@code CONVERT_TO_TEXT} base64-encodes a
+     * binary payload so it survives being handled as a string; otherwise the bytes are read as UTF-8.
+     */
+    private static String templateBody(Integration integration, byte[] body, boolean binaryRequest) {
+        if (body == null || body.length == 0) return null;
+        if (binaryRequest && "CONVERT_TO_TEXT".equalsIgnoreCase(integration.getContentHandling())) {
+            return Base64.getEncoder().encodeToString(body);
+        }
+        return new String(body, StandardCharsets.UTF_8);
+    }
+
+    /**
+     * The payload actually sent to the backend. {@code CONVERT_TO_BINARY} treats the rendered body
+     * as base64 and decodes it; anything else is sent as UTF-8 bytes.
+     */
+    private static byte[] outgoingPayload(Integration integration, String renderedBody) {
+        if (renderedBody == null) return new byte[0];
+        if ("CONVERT_TO_BINARY".equalsIgnoreCase(integration.getContentHandling())) {
+            try {
+                return Base64.getDecoder().decode(renderedBody.trim());
+            } catch (IllegalArgumentException e) {
+                LOG.debugv("CONVERT_TO_BINARY: body is not valid base64, sending it unchanged");
+            }
+        }
+        return renderedBody.getBytes(StandardCharsets.UTF_8);
+    }
+
     // ──────────────────────────── HTTP (non-proxy) ────────────────────────────
 
     /**
@@ -613,7 +823,8 @@ public class ApiGatewayExecuteController {
      * {@code selectionPattern} is matched against the backend's HTTP status code (for
      * {@code AWS}/Lambda integrations it is matched against the error message instead).
      */
-    private Response invokeHttpIntegration(GatewayResponseScope scope, String apiId, String httpMethod, String path,
+    private Response invokeHttpIntegration(GatewayResponseScope scope, String region, String apiId,
+                                           String httpMethod, String path,
                                            String proxy, String stageName, ApiGatewayResource resource,
                                            Integration integration, HttpHeaders headers,
                                            UriInfo uriInfo, byte[] body,
@@ -625,7 +836,9 @@ public class ApiGatewayExecuteController {
         }
 
         String requestId = UUID.randomUUID().toString();
-        String bodyStr = body != null && body.length > 0 ? new String(body, StandardCharsets.UTF_8) : null;
+        boolean binaryRequest = isBinaryMediaType(region, apiId,
+                headers.getHeaderString(HttpHeaders.CONTENT_TYPE));
+        String bodyStr = templateBody(integration, body, binaryRequest);
 
         Map<String, String> headerMap = new HashMap<>();
         for (Map.Entry<String, List<String>> e : headers.getRequestHeaders().entrySet()) {
@@ -691,8 +904,7 @@ public class ApiGatewayExecuteController {
         target.setIntegrationUri(uri);
         target.setIntegrationMethod(integration.getHttpMethod());
 
-        byte[] payload = transformedBody != null
-                ? transformedBody.getBytes(StandardCharsets.UTF_8) : new byte[0];
+        byte[] payload = outgoingPayload(integration, transformedBody);
 
         io.github.hectorvent.floci.services.apigatewayv2.proxy.RequestContext ctx =
                 new io.github.hectorvent.floci.services.apigatewayv2.proxy.RequestContext(
@@ -705,7 +917,7 @@ public class ApiGatewayExecuteController {
         LOG.debugv("execute-api: {0} {1}/{2}{3} → HTTP {4}", httpMethod, apiId, stageName, path, uri);
 
         io.github.hectorvent.floci.services.apigatewayv2.proxy.ProxyResult result =
-                httpProxyInvoker.invoke(target, ctx);
+                httpProxyInvoker.invoke(target, ctx, proxyOptions(integration));
 
         String responseBodyStr = result.body() != null
                 ? new String(result.body(), StandardCharsets.UTF_8) : "";
@@ -730,8 +942,8 @@ public class ApiGatewayExecuteController {
 
         // For HTTP integrations selectionPattern is matched against the backend's status code.
         return mapIntegrationResponse(integration, String.valueOf(result.statusCode()),
-                responseBodyStr, result.statusCode(), responseHeaders, responseMappingCtx,
-                defaultContentType);
+                responseBodyStr, result.body(), result.statusCode(), responseHeaders,
+                responseMappingCtx, defaultContentType);
     }
 
     private boolean isGatewayGeneratedProxyFailure(InvokeResult result) {
@@ -755,6 +967,18 @@ public class ApiGatewayExecuteController {
                                               Stage stage,
                                               MethodConfig method,
                                               HttpHeaders headers, UriInfo uriInfo, ResolvedApiKey resolvedApiKey) {
+        if ("COGNITO_USER_POOLS".equalsIgnoreCase(method.getAuthorizationType())) {
+            CognitoUserPoolAuthorizer.Result result = cognitoAuthorizer.authorize(region, apiId, method, headers);
+            if (result.failure() == CognitoUserPoolAuthorizer.Failure.UNAUTHORIZED) {
+                return new AuthorizerResult(gatewayResponse(scope, GatewayResponseType.UNAUTHORIZED, 401,
+                        "Unauthorized"), null, null);
+            }
+            if (result.failure() == CognitoUserPoolAuthorizer.Failure.ACCESS_DENIED) {
+                return new AuthorizerResult(gatewayResponse(scope, GatewayResponseType.ACCESS_DENIED, 403,
+                        "User is not authorized to access this resource"), null, null);
+            }
+            return new AuthorizerResult(null, result.principalId(), result.context());
+        }
         if ("CUSTOM".equals(method.getAuthorizationType())) {
             String authorizerId = method.getAuthorizerId();
             if (authorizerId == null) {
@@ -1122,7 +1346,9 @@ public class ApiGatewayExecuteController {
             }
             if (authorizerContext != null) {
                 authorizerContext.forEach((key, value) -> {
-                    if (value != null) {
+                    if (value instanceof Map<?, ?>) {
+                        authorizerNode.set(key, objectMapper.valueToTree(value));
+                    } else if (value != null) {
                         authorizerNode.put(key, value.toString());
                     }
                 });
@@ -1130,8 +1356,13 @@ public class ApiGatewayExecuteController {
         }
 
         if (body != null && body.length > 0) {
-            event.put("body", new String(body));
-            event.put("isBase64Encoded", false);
+            // A payload whose content type is in the API's binaryMediaTypes must reach the function
+            // base64-encoded; reading it as a UTF-8 string corrupts it.
+            boolean binary = isBinaryMediaType(region, apiId, headers.getHeaderString(HttpHeaders.CONTENT_TYPE));
+            event.put("body", binary
+                    ? Base64.getEncoder().encodeToString(body)
+                    : new String(body, StandardCharsets.UTF_8));
+            event.put("isBase64Encoded", binary);
         } else {
             event.putNull("body");
             event.put("isBase64Encoded", false);
@@ -1289,7 +1520,7 @@ public class ApiGatewayExecuteController {
         if (authorizerContext != null) {
             authorizerContext.forEach((key, value) -> {
                 if (value != null) {
-                    result.put(key, value.toString());
+                    result.put(key, value instanceof Map<?, ?> ? value : value.toString());
                 }
             });
         }
@@ -1316,11 +1547,11 @@ public class ApiGatewayExecuteController {
         // Build VTL context
         Map<String, String> headerMap = new HashMap<>();
         for (Map.Entry<String, List<String>> e : headers.getRequestHeaders().entrySet()) {
-            if (!e.getValue().isEmpty()) headerMap.put(e.getKey(), e.getValue().get(0));
+            if (!e.getValue().isEmpty()) headerMap.put(e.getKey(), e.getValue().getFirst());
         }
         Map<String, String> queryMap = new HashMap<>();
         for (Map.Entry<String, List<String>> e : uriInfo.getQueryParameters().entrySet()) {
-            if (!e.getValue().isEmpty()) queryMap.put(e.getKey(), e.getValue().get(0));
+            if (!e.getValue().isEmpty()) queryMap.put(e.getKey(), e.getValue().getFirst());
         }
         Map<String, String> pathMap = new HashMap<>();
         pathMap.putAll(extractPathParams(resource.getPath(), path));
@@ -1513,12 +1744,13 @@ public class ApiGatewayExecuteController {
                 "Unsupported Media Type");
         Map<String, String> requestTemplates = integration.getRequestTemplates();
 
+        RequestTemplateResult requestTemplateResult = new RequestTemplateResult(bodyStr != null ? bodyStr : "", incomingContentType, null);
         if (requestTemplates == null || requestTemplates.isEmpty()) {
             // No templates defined at all
             if ("NEVER".equalsIgnoreCase(integration.getPassthroughBehavior())) {
                 return new RequestTemplateResult(null, null, unsupportedMediaType);
             }
-            return new RequestTemplateResult(bodyStr != null ? bodyStr : "", incomingContentType, null);
+            return requestTemplateResult;
         }
 
         // Try exact match first, then without charset: "application/json; charset=utf-8" → "application/json"
@@ -1544,7 +1776,7 @@ public class ApiGatewayExecuteController {
             return new RequestTemplateResult(null, null, unsupportedMediaType);
         }
         // WHEN_NO_MATCH (default) — passthrough
-        return new RequestTemplateResult(bodyStr != null ? bodyStr : "", incomingContentType, null);
+        return requestTemplateResult;
     }
 
     /**
@@ -1559,6 +1791,16 @@ public class ApiGatewayExecuteController {
      */
     private Response mapIntegrationResponse(Integration integration, String selectionMatchString,
                                             String responseBodyStr, int fallbackStatus,
+                                            Map<String, String> integrationResponseHeaders,
+                                            VtlTemplateEngine.VtlContext responseMappingCtx,
+                                            String defaultContentType) {
+        return mapIntegrationResponse(integration, selectionMatchString, responseBodyStr, null,
+                fallbackStatus, integrationResponseHeaders, responseMappingCtx, defaultContentType);
+    }
+
+    private Response mapIntegrationResponse(Integration integration, String selectionMatchString,
+                                            String responseBodyStr, byte[] rawResponseBody,
+                                            int fallbackStatus,
                                             Map<String, String> integrationResponseHeaders,
                                             VtlTemplateEngine.VtlContext responseMappingCtx,
                                             String defaultContentType) {
@@ -1617,8 +1859,25 @@ public class ApiGatewayExecuteController {
             finalStatus = templateResult.statusOverride();
         }
 
+        // Integration-response contentHandling is an output conversion, applied after templates:
+        // CONVERT_TO_TEXT base64-encodes a binary payload for the caller, CONVERT_TO_BINARY decodes
+        // a base64 text payload back to bytes.
+        Object entity = finalBody;
+        String responseContentHandling = matchedResponse != null ? matchedResponse.contentHandling() : null;
+        if ("CONVERT_TO_TEXT".equalsIgnoreCase(responseContentHandling)) {
+            byte[] source = templateResult == null && rawResponseBody != null
+                    ? rawResponseBody : finalBody.getBytes(StandardCharsets.UTF_8);
+            entity = Base64.getEncoder().encodeToString(source);
+        } else if ("CONVERT_TO_BINARY".equalsIgnoreCase(responseContentHandling)) {
+            try {
+                entity = Base64.getDecoder().decode(finalBody.trim());
+            } catch (IllegalArgumentException e) {
+                LOG.debugv("CONVERT_TO_BINARY: response body is not valid base64, returning it unchanged");
+            }
+        }
+
         Response.ResponseBuilder rb = Response.status(finalStatus)
-                .entity(finalBody);
+                .entity(entity);
 
         String contentType = null;
 
@@ -2083,6 +2342,17 @@ public class ApiGatewayExecuteController {
     private final io.github.hectorvent.floci.services.apigatewayv2.proxy.HttpProxyInvoker httpProxyInvoker =
             new io.github.hectorvent.floci.services.apigatewayv2.proxy.HttpProxyInvoker();
 
+    /** REST integrations default to AWS's 29s and may opt out of backend TLS verification. */
+    private static io.github.hectorvent.floci.services.apigatewayv2.proxy.HttpProxyInvoker.ProxyOptions
+            proxyOptions(Integration integration) {
+        long timeoutMillis = integration.getTimeoutInMillis() != null
+                ? integration.getTimeoutInMillis() : 29_000L;
+        boolean insecure = integration.getTlsConfig() != null
+                && integration.getTlsConfig().isInsecureSkipVerification();
+        return new io.github.hectorvent.floci.services.apigatewayv2.proxy.HttpProxyInvoker.ProxyOptions(
+                java.time.Duration.ofMillis(timeoutMillis), insecure);
+    }
+
     private Response dispatchHttpProxyV2(io.github.hectorvent.floci.services.apigatewayv2.model.Integration integration,
                                           Route route, String httpMethod, String path,
                                           HttpHeaders headers, UriInfo uriInfo, byte[] body,
@@ -2269,12 +2539,18 @@ public class ApiGatewayExecuteController {
         }
     }
 
+    private Optional<Authorizer> findV2Authorizer(String region, String apiId, String authorizerId) {
+        try {
+            return Optional.of(apiGatewayV2Service.getAuthorizer(region, apiId, authorizerId));
+        } catch (AwsException e) {
+            return Optional.empty();
+        }
+    }
+
     private JwtAuthorizerResult enforceJwtAuthorizer(String region, String apiId, Route route, HttpHeaders headers,
                                           UriInfo uriInfo) {
-        Authorizer authorizer;
-        try {
-            authorizer = apiGatewayV2Service.getAuthorizer(region, apiId, route.getAuthorizerId());
-        } catch (AwsException e) {
+        Authorizer authorizer = findV2Authorizer(region, apiId, route.getAuthorizerId()).orElse(null);
+        if (authorizer == null) {
             return new JwtAuthorizerResult(Response.status(500)
                     .entity(jsonMessage("Authorizer not found"))
                     .type(MediaType.APPLICATION_JSON).build(), null);
@@ -2439,10 +2715,8 @@ public class ApiGatewayExecuteController {
     private RequestAuthorizerResult enforceRequestAuthorizerV2(String region, String apiId, String stageName,
                                                 Route route, String httpMethod, String path,
                                                 HttpHeaders headers, UriInfo uriInfo) {
-        Authorizer authorizer;
-        try {
-            authorizer = apiGatewayV2Service.getAuthorizer(region, apiId, route.getAuthorizerId());
-        } catch (AwsException e) {
+        Authorizer authorizer = findV2Authorizer(region, apiId, route.getAuthorizerId()).orElse(null);
+        if (authorizer == null) {
             return new RequestAuthorizerResult(Response.status(500)
                     .entity(jsonMessage("Authorizer not found"))
                     .type(MediaType.APPLICATION_JSON).build(), null);
